--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,14 +14,15 @@
 <body>
     <div class="navbar">
         <div class="container-logo">
-            <img src="/images/SS_logo_white.svg">
+            <a href="/"><img src="/images/SS_logo_white.svg"></a>
         </div>
-        <hr>
+        {{!-- <hr> --}}
         <nav>
             <div class="menuNav">
                 <ul id="MenuItems">
                     <li><a href="#">Perjalanan</a></li>
                     <li><a href="#">Kejayaan</a></li>
+                    <li><a href="/event">Event</a></li>
                     <li><a href="#">Berhubung</a></li>
                 </ul>
             </div>
@@ -41,14 +42,15 @@
     </div>
     <content>
         <div class="maintenance">
+            {{!-- <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p> --}}
         </div>
     </content>
 
-    <section class="container-mentor">
+    {{!-- <section class="container-mentor">
         <div class="mentor-text">
             <h1>Kenali mentor anda</h1>
             <div class="mentor-text-detail">
-                <p>Perjalanan bermula dengan sekecil bata. Cabaran yang ada</p>
+                <p>Syahril Sumery telah menceburi dalam industri insurans, dan telah berkhidmat sebagai agen jualan sehingga ke unit pengurusan agensi. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
             </div>
         </div>
         <div class="mentor-section">
@@ -64,7 +66,77 @@
     <section class="horizontal-section">
         <div class="sticky-wrapper">
             <div class="element-wrapper">
-                <div class="element"></div>
+                <div class="element1">
+                    <div class="element1-content">
+                        <h4>PERJALANAN DAN DIARI</h4>
+                        <h2>Daripada juruteknik ke unit pengurusan agensi</h2>
+                        <p>Dalam beberapa tahun, Syahril Sumery berjaya dalam karier insurans daripada agen jualan ke unit pengurusan. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
+                    </div>
+                    <div class="horizontal-line">
+                        <hr>
+                    </div>
+                </div>
+                <div class="element2">
+                    <img src="/images/syahril3.jpg" alt="">
+                    <div class="element2-content">
+                        <h3>Perjalanan dan diari</h3>
+                        <h1>Syahril Sumery</h1>
+                    </div>
+                </div>
+                <div class="element3">
+                    <div class="element3-content">
+                        <div class="element3-content-year">
+                            <p>2006</p>
+                        </div>
+                        <div class="element3-content-img">
+                            <img src="/images/syahril4.jpg" alt="">
+                            <p>Permulaan mengejar segulung ijazah. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="element4">
+                    <div class="element4-img1">
+                        <img src="/images/Syahril-collage.jpg" alt="">
+                    </div>
+                    <div class="element4-img2">
+                        <p>Permulaan mengejar segulung ijazah. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
+                        <img src="/images/syahril9.jpg" alt="">
+                    </div>
+                </div>
+                <div class="element5">
+                    <img src="/images/perodua3.jpeg" alt="">
+                    <div class="element5-content">
+                        <h1>Permulaan karier</h1>
+                    </div>
+                </div>
+                <div class="element6">
+                    <div class="element6-container">
+                        <div class="element6-year">
+                            <p>2008</p>
+                        </div>
+                        <div class="element6-content">
+                            <div class="element6-content-img">
+                                <img src="/images/syahril7.jpg" alt="">
+                            </div>
+                            <div class="element6-content-text">
+                                <p>Permulaan mengejar segulung ijazah. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="element7">
+                    <img src="/images/syahril8.jpg" alt="">
+                </div>
+                <div class="element8">
+                    <div class="element8-container">
+                        <div class="element8-year">
+                            <p>2010</p>
+                        </div>
+                        <div class="element8-text">
+                            <p>Permulaan mengejar segulung ijazah. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="element"></div>
                 <div class="element"></div>
                 <div class="element"></div>
@@ -88,7 +160,7 @@
             </div>
             <img class="background-img" src="/images/background-office-2.jfif" alt="">
         </div>
-    </section>
+    </section> --}}
 
     <div class="footer">
         <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p>
