--- a/views/event.hbs
+++ b/views/event.hbs
@@ -43,23 +43,23 @@
     <div class="spacing"></div>
 
     <div class="event-button-section">
-        <button class="event-button"><a href="https://mgnaapn2022.files.wordpress.com/2022/05/programme-of-the-night.pdf">Event Itinerary</a></button>
+        <a href="https://mgnaapn2022.files.wordpress.com/2022/05/programme-of-the-night.pdf"><button class="event-button">Event Itinerary</button></a>
     </div>
 
     <div class="event-button-section">
-        <button class="event-button"><a href="https://mgnaapn2022.files.wordpress.com/2022/05/e-booklet-mgnaapn-2022.pdf">E-Booklet</a></button>
+        <a href="https://mgnaapn2022.files.wordpress.com/2022/05/e-booklet-mgnaapn-2022.pdf"><button class="event-button">E-Booklet</button></a>
     </div>
 
     <div class="event-button-section">
-        <button class="event-button"><a href="https://www.youtube.com/watch?v=2LwxC3wRXd4">View Latest Version Muqmeen Pejuang Song</a></button>
+        <a href="https://www.youtube.com/watch?v=2LwxC3wRXd4"><button class="event-button">View Latest Version Muqmeen Pejuang Song</button></a>
     </div>
 
     <div class="event-button-section">
-        <button class="event-button"><a href="https://maps.app.goo.gl/ymr8wwgReZN6dNQc7">Location to Wyndam Acmar Hotel Klang</a></button>
+        <a href="https://maps.app.goo.gl/ymr8wwgReZN6dNQc7"><button class="event-button">Location to Wyndam Acmar Hotel Klang</button></a>
     </div>
 
     <div class="event-button-section">
-        <button class="event-button"><a href="https://us06web.zoom.us/j/93758840096?pwd=dk9UT1ZtQUdYV0pIc0VaR0F0YnZEUT09">Virtual Session by Zoom</a></button>
+        <a href="https://us06web.zoom.us/j/93758840096?pwd=dk9UT1ZtQUdYV0pIc0VaR0F0YnZEUT09"><button class="event-button">Virtual Session by Zoom</button></a>
     </div>
 
     <div class="spacing-2"></div>
