--- a/views/event.hbs
+++ b/views/event.hbs
@@ -51,7 +51,7 @@
     </div>
 
     <div class="event-button-section">
-        <a href="https://www.youtube.com/watch?v=2LwxC3wRXd4"><button class="event-button">View Latest Version Muqmeen Pejuang Song</button></a>
+        <a href="https://m.youtube.com/watch?v=xIEjFyc1jZw&feature=youtu.be"><button class="event-button">View Latest Version Muqmeen Pejuang Song</button></a>
     </div>
 
     <div class="event-button-section">
