--- a/public/styles.css
+++ b/public/styles.css
@@ -27,17 +27,11 @@ body {
     width: 80px;
 }
 
-hr {
-    margin-left: 50px;
-    margin-right: 50px;
-    width: 60%;
-}
-
 .navbar {
-    margin-top: 4vh;
+    /* margin-top: 4vh; */
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 3px;
     top: 0;
     position: -webkit-sticky;
     position: sticky;
@@ -59,6 +53,16 @@ nav ul li {
     display: inline-block;
     margin-right: 20px;
     color: white;
+}
+
+nav ul li p {
+    color: #5EB7EA;
+    cursor: pointer;
+    transition: color 0.5s;
+}
+
+nav ul li p:hover {
+    color: #cd51d3;
 }
 
 h1, h2, h3, h4, p {
@@ -166,64 +170,382 @@ header span {
     white-space: nowrap;
 }
 
-.maintenance {
-    margin-top: 100vh;
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 100px;
+.word-animation {
+    height: 95vh;
+}
+
+.container-mentor-background {
+    background-color: white;
 }
 
 .container-mentor {
-    height: 100vh;
+    height: 650px;
+    display: flex;
     position: relative;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1024px;
 }
 
-.mentor-section {
-    position: relative;
-}
-
-.mentor {
-    position: relative;
-}
-
-.mentor-img {
-    position: absolute;
-    left: 10vw;
-    filter: grayscale(40%);
-}
-
-.mentor-img img{
-    width: 400px;
-}
-
-.background-img {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    z-index: -1;
-    object-fit: cover;
-    margin-bottom: 10%;
-    opacity: 0.3;
-}
-
-.mentor-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.mentor-text-position {
+    display: flex;
+    align-items: center;
+    height: 650px;
+    width: 550px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .mentor-text h1 {
+    color: black;
     font-size: 50px;
+    margin-bottom: 5px;
 }
 
-.mentor-text-detail {
+.mentor-text span {
+    color: black;
+    font-size: 33px;
+}
+
+.mentor-text p {
     margin-top: 50px;
-    margin-left: 200px;
-    text-align: left;
+    color: black;
+    font-size: 20px;
+}
+
+/* .mentor-img {
+    position: relative;
+} */
+
+/* .mentor-img-position {
+    position: absolute;
+    bottom: 0;
+    transform: translateY(4px);
+} */
+
+.mentor-img img {
+    height: 650px;
+}
+
+#mainButton {
+    margin: 50px 0;
+    display: inline-block;
+    cursor: pointer;
+    background: #3771C6;
+    color: white;
+    transition: background 0.5s;
+    padding: 12px 25px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+}
+
+#mainButton:hover {
+    background: #094292;
+}
+
+.container-pencapaian-background {
+    background-color: white;
+}
+
+.container-pencapaian {
+    /* height: 400px; */
+    display: flex;
+    background-color: #2F3649; /* For browsers that do not support gradients */
+    background-image: linear-gradient(#2F3649, #3C69AB);
+    width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 80px;
+    border-radius: 20px;
+    position: relative;
+}
+
+/* .pencapaian {
+    position: absolute;
+    top: 50%;
+    left: 80px;
+    transform: translateY(-50%);
+} */
+
+#prevBtn {
+    position: absolute;
+    top: 5px;
+    z-index: 10;
+    left: 350px;
+    font-size: 50px;
+    color: white;
+    cursor: pointer;
+}
+
+#nextBtn {
+    position: absolute;
+    bottom: 5px;
+    z-index: 10;
+    left: 350px;
+    font-size: 50px;
+    color: white;
+    cursor: pointer;
+}
+
+.position-carousel {
+    height: 300px;
+    position: relative;
+}
+
+.carousel-container {
+    overflow: hidden;
+    height: 300px;
+    align-items: center;
+    width: 595px;
+    position: relative;
+}
+
+.roulette-container {
+    height: 300px;
+    width: 595px;
+    position: relative;
+}
+
+.hero img {
+    height: 300px;
+    width: 595px;
+    position: relative;
+}
+
+.headline {
+    display: flex;
+    position: absolute;
+    vertical-align: middle;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 3;
+    height: 150px;
+    width: 590px;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid;
+    border-color: #CACACA;
+    box-shadow: 5px 10px rgba(0, 0, 0, 0.25);
+}
+
+.headline h1 {
+    color: black;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: 11;
+    display: none;
+}
+
+.modal-content {
+    padding-left: 10px;
+    padding-right: 10px;
     max-width: 400px;
+    z-index: 4;
+    top: -100vh;
+    animation: drop 0.5s ease forwards;
+    padding-bottom: 15px;
+    margin: 0 auto !important; 
+	float: none !important;
+}
+
+@keyframes drop {
+    0%{opacity: 0}
+    70%{transform: translateY(10vh)}
+    100%{transform: translateY(8vh); opacity: 1;}
+}
+
+.modal-header {
+    text-align: right;
+    font-size: 26px;
+    padding-right: 10px;
+}
+
+.modal-close {
+    margin-top: 10px;
+    cursor: pointer;
+    color: #094292;
+    font-size: 20px;
+    background: #efefef;
+    border: 0;
+    border-radius: 50px;
+    outline: 0;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    transition: background 0.5s;
+}
+
+.modal-header .modal-close:hover {
+    background: lightgray;
+}
+
+.modal-body {
+    color: #7b7b7b;
+    padding: 15px 0;
+}
+
+.modal {
+    overflow-y: auto;
+}
+
+.containerEmail2 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
+    background-color: #1D3557;
+    /* box-shadow: 0px 0px 2px white; */
+    max-width: 500px;
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.containerEmail2 h2 {
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.modal-header-background {
+    background-color: #1D3557;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.modal-header-font {
+    text-align: center;
+}
+
+.modal-header-font p {
+    font-size: 20px;
+    color: white;
+}
+
+.whatsapp-container-position {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.whatsapp-container {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bottomButtonWhatsapp img {
+    height: 45px;
+}
+
+.arrow-right {
+    margin-top: auto;
+    margin-bottom: auto;
+    color: white;
+}
+
+.modal-content-background {
+    position: relative;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #F0F0F0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.modal-content-background p {
+    color: black;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.modal-content-background img {
+    position: absolute;
+    height: 25px;
+    transform: translateY(-10px);
+}
+
+.form-group {
+    width: 100%;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.form-group input, .form-group textarea {
+    width: 100%;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 12px;
+    border: 1px solid lightgray;
+}
+
+textarea {
+    resize: vertical;
+}
+
+button[type="submit"] {
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 10px;
+    /* margin-bottom: 30px; */
+    color: white;
+    background-color: #3771C6;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.5s, color .5s;
+}
+
+button[type="submit"]:hover {
+    background-color: #094292;
+}
+
+#status {
+    text-align: center;
+    font-size: 12px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+#status.success {
+    color: rgb(38, 163, 95);
+    animation: status 4s ease forwards;
+}
+
+#status.error {
+    color: red;
+    animation: status 4s ease forwards;
+}
+
+@keyframes status {
+    0% {
+        opacity: 1;
+        pointer-events: all;
+    }
+    90% {
+        opacity: 1;
+        pointer-events: all;
+    }
+    100% {
+        opacity: 0;
+        pointer-events: none;
+    }
 }
 
 .horizontal-section {
@@ -258,9 +580,9 @@ header span {
     width: 400px;
 }
 
-.element1-content h2, h4{
+/* .element1-content h2, h4{
     margin-bottom: 30px;
-}
+} */
 
 .element1-content p{
     margin-left: 100px;
@@ -517,6 +839,11 @@ header span {
     width: 100vw;
 }
 
+.bottom-filler {
+    height: 100vh;
+    background-color: blue;
+}
+
 @keyframes animate {
     0%{
         background-position: 0%;
@@ -547,7 +874,7 @@ header span {
     }
     nav ul {
         position: absolute;
-        top: 75px;
+        top: 62px;
         right: 0;
         width: 180px;
         overflow: hidden;
@@ -608,4 +935,25 @@ header span {
             margin-bottom: -30px;
         }
     }
+    .container-mentor {
+        height: 1100px;
+        display: block;
+        width: 400px;
+    }
+    .mentor-text {
+        padding-top: 150px;
+    }
+    .mentor-img img {
+        height: 600px;
+        width: 400px;
+    }
+    .mentor-text-position {
+        width: 400px;
+        height: 500px;
+    }
+    .container-pencapaian-background {
+        width: 400px;
+    }
 }
+
+
