--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -16,14 +19,13 @@
         <div class="container-logo">
             <a href="/"><img src="/images/SS_logo_white.svg"></a>
         </div>
-        {{!-- <hr> --}}
         <nav>
             <div class="menuNav">
                 <ul id="MenuItems">
-                    <li><a href="#">Perjalanan</a></li>
-                    <li><a href="#">Kejayaan</a></li>
-                    <li><a href="/event">Event</a></li>
-                    <li><a href="#">Berhubung</a></li>
+                    <li><a href="#">Produk</a></li>
+                    <li><a href="#">Latihan</a></li>
+                    <li><a href="/event">Acara</a></li>
+                    <li><p class="modal-open" data-modal="modal1">Berhubung</p></li>
                 </ul>
             </div>
         </nav>
@@ -41,27 +43,153 @@
         </header>
     </div>
     <content>
-        <div class="maintenance">
-            {{!-- <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p> --}}
-        </div>
+        <div class="word-animation"></div>
     </content>
 
-    {{!-- <section class="container-mentor">
-        <div class="mentor-text">
-            <h1>Kenali mentor anda</h1>
-            <div class="mentor-text-detail">
-                <p>Syahril Sumery telah menceburi dalam industri insurans, dan telah berkhidmat sebagai agen jualan sehingga ke unit pengurusan agensi. Perjalanan ini bukanlah suatu perkara yang mudah, tetapi tidak menjadi satu penghalang untuk terus berjaya.</p>
-            </div>
-        </div>
-        <div class="mentor-section">
-            <div class="mentor">
-                <div class="mentor-img">
-                    <img src="/images/syahril1.jpg" alt="">
+    <div class="container-mentor-background">
+        <section class="container-mentor">
+            <div class="mentor-text-position">
+                <div class="mentor-text">
+                    <h1>Syahril Sumery</h1>
+                    <span>Kenali mentor anda.</span>
+                    <p>Syahril Sumery merupakan seorang pengurus unit agensi insurans yang berpengalaman dan sudah menceburi dalam industri jualan lebih 10 tahun.</p>
+                    <button class="modal-open" data-modal="modal1" id="mainButton">Berhubung</button>
                 </div>
             </div>
-            <img class="background-img" src="/images/background-office-2.jfif" alt="">
+            <div class="mentor-img">
+                <div class="mentor-img-position">
+                    <img src="/images/syahril-home.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <div class="container-pencapaian-background">
+        <section class="container-pencapaian">
+            <i class="material-icons" id="prevBtn">expand_less</i>
+            <i class="material-icons" id="nextBtn">expand_more</i>
+            <div class="pencapaian">
+                <div class="mainTitleTop">
+                    <div class="position-carousel">
+                        <div class="carousel-container">
+                            <div class="carousel-slide">
+                                <div class="roulette-container">
+                                    <div class="hero">
+                                        <img src="images/background-empty.png" id="lastClone" alt="">
+                                        <div class="headline">
+                                            <h1>house building</h1>
+                                            <h1>house building</h1>
+                                        </div>
+                                    </div>    
+                                </div>
+                                <div class="roulette-container">
+                                    <div class="hero">
+                                        <img src="images/background-empty.png" alt="">
+                                        <div class="headline">
+                                            <h1>civil construction</h1>
+                                            <h1>civil construction</h1>
+                                        </div>
+                                    </div>    
+                                </div>
+                                <div class="roulette-container">
+                                    <div class="hero">
+                                        <img src="images/background-empty.png" alt="">
+                                        <div class="headline">
+                                            <h1>home renovation</h1>
+                                            <h1>home renovation</h1>
+                                        </div>
+                                    </div>    
+                                </div>
+                                <div class="roulette-container">
+                                    <div class="hero">
+                                        <img src="images/background-empty.png" alt="">
+                                        <div class="headline">
+                                            <h1>glass installation</h1>
+                                            <h1>glass installation</h1>
+                                        </div>
+                                    </div>    
+                                </div>
+                                <div class="roulette-container">
+                                    <div class="hero">
+                                        <img src="images/background-empty.png" alt="">
+                                        <div class="headline">
+                                            <h1>house building</h1>
+                                            <h1>house building</h1>
+                                        </div>
+                                    </div>    
+                                </div>
+                                <div class="roulette-container">
+                                    <div class="hero">
+                                        <img src="images/background-empty.png" id="firstClone" alt="">
+                                        <div class="headline">
+                                            <h1>civil construction</h1>
+                                            <h1>civil construction</h1>
+                                        </div>
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pencapaian-link">
+                <h1>Koleksi pencapaian</h1>
+            </div>
+        </section>
+    </div>
+
+        <div class="modal" id="modal1">
+        <div class="modal-content">
+            <div class="containerEmail2">
+                <div class="modal-header-background">
+                    <div class="modal-header">
+                        <button class="icon modal-close">
+                            <i class="material-icons">close</i>
+                        </button>
+                    </div>
+                    <div class="modal-header-font">
+                        <p>Hantar pertanyaan anda melalui Whatsapp</p>
+                        <div class="whatsapp-container-position">
+                            <a href="https://wa.link/2ensol">
+                                <div class="whatsapp-container">
+                                    <div class="bottomButtonWhatsapp">
+                                        <img src="images/whatsapp-logo-circle.png" alt="">
+                                    </div>
+                                    <div class="arrow-right">
+                                        <i class="material-icons">chevron_right</i>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-content-background">
+                    <img src="images/triangle-modal.svg" alt="">
+                    <p>Atau isi borang di bawah:</p>
+                    <form action="https://formspree.io/f/mbjqqlaz" method="POST" id="my-form">
+                        <div class="form-group">
+                            <label for="name">Nama</label>
+                            <input type="text" id="name" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="phoneNumber">Nombor telefon</label>
+                            <input type="text" id="phoneNumber" name="phoneNumber">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Emel</label>
+                            <input type="email" id="email" name="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Mesej</label>
+                            <textarea name="message" id="message" cols="30" rows="3"></textarea>
+                        </div>
+                        <button type="submit">Hantar</button>
+                        <div id="status"></div>
+                    </form>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
 
     <section class="horizontal-section">
         <div class="sticky-wrapper">
@@ -145,26 +273,13 @@
         </div>
     </section>
 
-    <section class="container-mentor">
-        <div class="mentor-text">
-            <h1>Kenali mentor anda</h1>
-            <div class="mentor-text-detail">
-                <p>Perjalanan bermula dengan sekecil bata. Cabaran yang ada</p>
-            </div>
-        </div>
-        <div class="mentor-section">
-            <div class="mentor">
-                <div class="mentor-img">
-                    <img src="/images/syahril1.jpg" alt="">
-                </div>
-            </div>
-            <img class="background-img" src="/images/background-office-2.jfif" alt="">
-        </div>
-    </section> --}}
-
-    <div class="footer">
-        <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p>
+    <div class="bottom-filler">
+        
     </div>
+
+    {{!-- <div class="footer">
+        <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p>
+    </div> --}}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
