--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/lightslider.css">
+    <script src="/jquery.js"></script>
+    <script src="/lightslider.js"></script>
 </head>
 
 <body>
@@ -66,66 +70,68 @@
 
     <div class="container-pencapaian-background">
         <section class="container-pencapaian">
-            <i class="material-icons" id="prevBtn">expand_less</i>
-            <i class="material-icons" id="nextBtn">expand_more</i>
-            <div class="pencapaian">
-                <div class="mainTitleTop">
-                    <div class="position-carousel">
-                        <div class="carousel-container">
-                            <div class="carousel-slide">
-                                <div class="roulette-container">
-                                    <div class="hero">
-                                        <img src="images/background-empty.png" id="lastClone" alt="">
-                                        <div class="headline">
-                                            <h1>house building</h1>
-                                            <h1>house building</h1>
-                                        </div>
-                                    </div>    
-                                </div>
-                                <div class="roulette-container">
-                                    <div class="hero">
-                                        <img src="images/background-empty.png" alt="">
-                                        <div class="headline">
-                                            <h1>civil construction</h1>
-                                            <h1>civil construction</h1>
-                                        </div>
-                                    </div>    
-                                </div>
-                                <div class="roulette-container">
-                                    <div class="hero">
-                                        <img src="images/background-empty.png" alt="">
-                                        <div class="headline">
-                                            <h1>home renovation</h1>
-                                            <h1>home renovation</h1>
-                                        </div>
-                                    </div>    
-                                </div>
-                                <div class="roulette-container">
-                                    <div class="hero">
-                                        <img src="images/background-empty.png" alt="">
-                                        <div class="headline">
-                                            <h1>glass installation</h1>
-                                            <h1>glass installation</h1>
-                                        </div>
-                                    </div>    
-                                </div>
-                                <div class="roulette-container">
-                                    <div class="hero">
-                                        <img src="images/background-empty.png" alt="">
-                                        <div class="headline">
-                                            <h1>house building</h1>
-                                            <h1>house building</h1>
-                                        </div>
-                                    </div>    
-                                </div>
-                                <div class="roulette-container">
-                                    <div class="hero">
-                                        <img src="images/background-empty.png" id="firstClone" alt="">
-                                        <div class="headline">
-                                            <h1>civil construction</h1>
-                                            <h1>civil construction</h1>
-                                        </div>
-                                    </div>    
+            <div class="roulette-container">
+                <i class="material-icons" id="prevBtn">expand_less</i>
+                <i class="material-icons" id="nextBtn">expand_more</i>
+                <div class="pencapaian">
+                    <div class="mainTitleTop">
+                        <div class="position-carousel">
+                            <div class="carousel-container">
+                                <div class="carousel-slide">
+                                    <div class="roulette-container">
+                                        <div class="hero">
+                                            <img src="images/background-empty.png" id="lastClone" alt="">
+                                            <div class="headline">
+                                                <h1>house building</h1>
+                                                <h1>house building</h1>
+                                            </div>
+                                        </div>    
+                                    </div>
+                                    <div class="roulette-container">
+                                        <div class="hero">
+                                            <img src="images/background-empty.png" alt="">
+                                            <div class="headline">
+                                                <h1>civil construction</h1>
+                                                <h1>civil construction</h1>
+                                            </div>
+                                        </div>    
+                                    </div>
+                                    <div class="roulette-container">
+                                        <div class="hero">
+                                            <img src="images/background-empty.png" alt="">
+                                            <div class="headline">
+                                                <h1>home renovation</h1>
+                                                <h1>home renovation</h1>
+                                            </div>
+                                        </div>    
+                                    </div>
+                                    <div class="roulette-container">
+                                        <div class="hero">
+                                            <img src="images/background-empty.png" alt="">
+                                            <div class="headline">
+                                                <h1>glass installation</h1>
+                                                <h1>glass installation</h1>
+                                            </div>
+                                        </div>    
+                                    </div>
+                                    <div class="roulette-container">
+                                        <div class="hero">
+                                            <img src="images/background-empty.png" alt="">
+                                            <div class="headline">
+                                                <h1>house building</h1>
+                                                <h1>house building</h1>
+                                            </div>
+                                        </div>    
+                                    </div>
+                                    <div class="roulette-container">
+                                        <div class="hero">
+                                            <img src="images/background-empty.png" id="firstClone" alt="">
+                                            <div class="headline">
+                                                <h1>civil construction</h1>
+                                                <h1>civil construction</h1>
+                                            </div>
+                                        </div>    
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -133,6 +139,8 @@
                 </div>
             </div>
             <div class="pencapaian-link">
+                <h1>Koleksi pencapaian</h1>
+                <h1>Koleksi pencapaian</h1>
                 <h1>Koleksi pencapaian</h1>
             </div>
         </section>
@@ -189,6 +197,115 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="bottom-filler">
+        <div class="ourProjects">
+
+        <div class="mainTitle">
+            <h1>Our projects</h1>
+            <p>We have completed many projects, especially in civil construction and glass installation.</p>
+        </div> 
+
+        <div class="lightSliderDiv">
+
+            <ul id="responsive" class="cs-hidden">
+
+                <li class="item-a">
+                    <div class="box">
+                        <div class="slide-img">
+                            <img src="/images/tmj1.jpg" alt="">
+                        </div>
+                        <div class="detail-box">
+                            <div class="type">
+                                <a href="#">Glass Installation</a>
+                                <span>Renovation for building</span>
+                            </div>    
+                            <a href="#" class="price">Feb 2020</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="item-b">
+                    <div class="box">
+                        <div class="slide-img">
+                            <img src="/images/tmj2.jpg" alt="">
+                        </div>
+                        <div class="detail-box">
+                            <div class="type">
+                                <a href="#">Glass Installation</a>
+                                <span>Renovation for building</span>
+                            </div>    
+                            <a href="#" class="price">Feb 2020</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="item-c">
+                    <div class="box">
+                        <div class="slide-img">
+                            <img src="/images/tmj3.jpg" alt="">
+                        </div>
+                        <div class="detail-box">
+                            <div class="type">
+                                <a href="#">Glass Installation</a>
+                                <span>Renovation for building</span>
+                            </div>    
+                            <a href="#" class="price">Feb 2020</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="item-d">
+                    <div class="box">
+                        <div class="slide-img">
+                            <img src="/images/tmj4.jpg" alt="">
+                        </div>
+                        <div class="detail-box">
+                            <div class="type">
+                                <a href="#">Glass Installation</a>
+                                <span>Renovation for building</span>
+                            </div>    
+                            <a href="#" class="price">Feb 2020</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="item-e">
+                    <div class="box">
+                        <div class="slide-img">
+                            <img src="/images/tmj5.jpg" alt="">
+                        </div>
+                        <div class="detail-box">
+                            <div class="type">
+                                <a href="#">Glass Installation</a>
+                                <span>Renovation for building</span>
+                            </div>    
+                            <a href="#" class="price">Feb 2020</a>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="item-f">
+                    <div class="box">
+                        <div class="slide-img">
+                            <img src="/images/tmj6.jpg" alt="">
+                        </div>
+                        <div class="detail-box">
+                            <div class="type">
+                                <a href="#">Glass Installation</a>
+                                <span>Renovation for building</span>
+                            </div>    
+                            <a href="#" class="price">Feb 2020</a>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
+
+        </div>
+
+    </div>
     </div>
 
     <section class="horizontal-section">
