Mobile repair horizontal

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -56,7 +56,9 @@
                 <div class="mentor-text">
                     <h1>Syahril Sumery</h1>
                     <span>Kenali mentor anda.</span>
-                    <p>Syahril Sumery merupakan seorang pengurus unit agensi insurans yang berpengalaman dan sudah menceburi dalam industri jualan lebih 10 tahun.</p>
+                    <div class="mentor-description">
+                        <p>Syahril Sumery merupakan seorang pengurus unit agensi insurans yang berpengalaman dan sudah menceburi dalam industri jualan lebih 10 tahun.</p>
+                    </div>
                     <button class="modal-open" data-modal="modal1" id="mainButton">Berhubung</button>
                 </div>
             </div>
@@ -70,7 +72,7 @@
 
     <div class="container-pencapaian-background">
         <section class="container-pencapaian">
-            <div class="roulette-container">
+            <div class="roulette-outer-container">
                 <i class="material-icons" id="prevBtn">expand_less</i>
                 <i class="material-icons" id="nextBtn">expand_more</i>
                 <div class="pencapaian">
