--- a/public/styles.css
+++ b/public/styles.css
@@ -1056,6 +1056,21 @@ button[type="submit"]:hover {
     #nextBtn {
         left: 200px;
     }
+    .container-mentor {
+        width: 300px;
+    }
+    .mentor-text-position {
+        width: 300px;
+        height: 650px;
+    }
+    .mentor-description {
+        width: 300px;
+    }
+    .mentor-img img {
+        max-width: 100%;
+        max-height: 100%;
+        height: inherit !important;
+    }
 }
 
 
